--- a/App.css
+++ b/App.css
@@ -31,7 +31,8 @@
 }
 
 #aboutmeContents {
-  padding: 4rem 1rem 2rem 1rem;
+  /*padding: 4rem 1rem 2rem 1rem;*/
+  padding: 1rem;
   height: 100%;
 }
 
@@ -40,16 +41,22 @@
 }
 
 #servicesContents {
-  padding: 4rem 1rem 2rem 1rem;
+  /*padding: 4rem 1rem 2rem 1rem;*/
+  padding: 1rem;
 }
 
 #servicesContents h2 {
   text-align: center;
 }
 
+#portfolio {
+  overflow: hidden;
+}
+
 #portfolioContents {
-  padding: 4rem 1rem 2rem 1rem;
+  /*padding: 4rem 1rem 2rem 1rem;*/
   height: 100%;
+  padding-left: 1rem;
 }
 
 #portfolioContents.container {
@@ -61,7 +68,8 @@
 }
 
 #contactContents {
-  padding: 4rem 1rem 2rem 1rem;
+  /*padding: 4rem 1rem 2rem 1rem;*/
+  padding: 1rem;
   text-align: center;
   display: grid;
 }
@@ -183,7 +191,8 @@
 }
 
 .media iframe {
-  height: 188px;
+  /*height: 188px;*/
+  height: 380px;
 }
 
 .desc {
@@ -255,7 +264,22 @@ button.active {
   position:relative;
 }
 
+.sidenav {
+  padding: 1rem;
+}
+
+.sidenav button {
+  padding: 0.5rem;
+  background-color: black;
+  color: white;
+  border: 2px solid #FFC000;
+}
+
 .closeButton {
+  float: right;
+}
+
+/*.closeButton {
   position: absolute;
   right: 2rem;
   top: 1rem;
@@ -275,7 +299,7 @@ button.active {
   background-color: black;
   color: white;
   z-index: 2;
-}
+}*/
 
 /*#emailModal {
   position: absolute;
@@ -324,13 +348,6 @@ button.active {
 
 
 
-
-
-
-
-
-
-
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
 and (min-device-width : 320px) 
@@ -361,7 +378,8 @@ and (max-device-width : 480px) {
     color: white;
     width: 100%;
     height: 100%;
-    background-color: #FFC000;
+    /*background-color: #FFC000;*/
+    background-color: green;
   
     position: absolute;
     z-index: 1;
@@ -397,6 +415,10 @@ and (max-device-width : 480px) {
 
   #portfolioContents button {
     margin-top: 0.5rem;
+  }
+
+  .media iframe {
+    height: 188px;
   }
   
   #contact {
@@ -484,7 +506,8 @@ and (orientation : landscape) {
     color: white;
     width: 100%;
     height: 100%;
-    background-color: #FFC000;
+    /*background-color: #FFC000;*/
+    background-color: green;
   
     position: absolute;
     z-index: 1;
@@ -538,6 +561,14 @@ and (max-width : 320px) {
 and (max-width : 375px) {
 }*/
 
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (device-width : 320px) {
+  .media iframe {
+    height: 160px;
+  }
+}
+
 /* iPads (portrait and landscape) ----------- */
 @media only screen 
 and (min-device-width : 768px) 
@@ -570,7 +601,7 @@ and (max-device-width : 1024px) {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 72%;
+    bottom: 46%;
     left: 0;
     z-index: 1;
   }
@@ -582,37 +613,38 @@ and (max-device-width : 1024px) {
   #aboutme.slideOut {
     transform: translateX(-100%);
   }
-  #aboutmePic {
+  #aboutmePic, #servicesPic {
     background-image: url(deadpool.jpg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     transition: transform 400ms ease-in;
     position: absolute;
-    top: 28%;
+    top: 54%;
     right: 0;
-    bottom: 25%;
+    bottom: 0%;
     left: 0;
   }
   
-  #aboutmePic.slideIn {
+  #aboutmePic.slideIn,#servicesPic.slideIn {
     transform: translateX(0%);
   }
   
-  #aboutmePic.slideOut {
-    transform: translateX(100%);
+  #aboutmePic.slideOut,#servicesPic.slideOut {
+    transform: translateX(-100%);
   }
   
   #services {
     transition: transform 400ms ease-in;
     
     color: white;
-    background-color: #FFC000;
-  
+    /*background-color: #FFC000;*/
+    background-color: green;
+
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 25%;
+    bottom: 46%;
     z-index: 1;
   }
   
@@ -634,7 +666,7 @@ and (max-device-width : 1024px) {
   
     position: absolute;
     top: 0;
-    bottom: 25%;
+    bottom: 0;
     left: 0;
     right: 0;
     z-index: 1;
@@ -646,6 +678,10 @@ and (max-device-width : 1024px) {
   
   #portfolio.slideOut {
     transform: translateX(-100%);
+  }
+
+  .media iframe {
+    height: 188px;
   }
 
   .comm, .short, .photo {
@@ -683,9 +719,9 @@ and (orientation : landscape) {
   
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 60%;
-    left: 40%;
+    right: 60%;
+    bottom: 0;
+    left: 0;
     z-index: 1;
   }
   
@@ -694,7 +730,7 @@ and (orientation : landscape) {
   }
   
   #aboutme.slideOut {
-    transform: translateX(100%);
+    transform: translateX(-100%);
   }
   
   #aboutmePic {
@@ -704,7 +740,7 @@ and (orientation : landscape) {
     position: absolute;
     right: 0;
     left: 40%;
-    top: 40%;
+    top: 0;
     bottom: 0;
   }
   
@@ -722,7 +758,8 @@ and (orientation : landscape) {
     color: white;
     width: 50%;
     height: 100%;
-    background-color: #FFC000;
+    /*background-color: #FFC000;*/
+    background-color: green;
   
     position: absolute;
     z-index: 1;
@@ -735,13 +772,19 @@ and (orientation : landscape) {
   #services.slideOut {
     transform: translateX(200%);
   }
+
+  #servicesPic {
+    position: absolute;
+    top: 0;
+    right: 50%;
+    bottom: 0%;
+    left: 0;
+  }
   
   #portfolio {
     transition: transform 400ms ease-in;
     
     color: black;
-    width: 50%;
-    height: 100%;
     background-color: white;
   
     position: absolute;
@@ -846,7 +889,7 @@ and (min-width : 1224px) {
   
     position: absolute;
     top: 0;
-    right: 76%;
+    right: 60%;
     bottom: 0;
     left: 0;
     z-index: 1;
@@ -865,7 +908,7 @@ and (min-width : 1224px) {
     background-size: cover;
     transition: transform 400ms ease-in;
     position: absolute;
-    left: 24%;
+    left: 40%;
     right: 0;
     top: 0;
     bottom: 0;
@@ -885,7 +928,8 @@ and (min-width : 1224px) {
     color: white;
     width: 50%;
     height: 100%;
-    background-color: #FFC000;
+    /*background-color: #FFC000;*/
+    background-color: green;
   
     position: absolute;
     z-index: 1;
