--- a/App.css
+++ b/App.css
@@ -54,9 +54,12 @@
 }
 
 #portfolioContents {
-  /*padding: 4rem 1rem 2rem 1rem;*/
-  height: 100%;
+  /*padding: 4rem 1rem 2rem 1rem;
+  height: 100%;*/
   padding-left: 1rem;
+  position: absolute;
+  bottom: 0;
+  top: 4rem;
 }
 
 #portfolioContents.container {
@@ -191,8 +194,9 @@
 }
 
 .media iframe {
-  /*height: 188px;*/
-  height: 380px;
+  /*height: 188px;
+  height: 380px;*/
+  height: auto;
 }
 
 .desc {
@@ -418,7 +422,8 @@ and (max-device-width : 480px) {
   }
 
   .media iframe {
-    height: 188px;
+    /*height: 188px;*/
+    height: auto;
   }
   
   #contact {
@@ -985,8 +990,26 @@ and (min-width : 1224px) {
   }
 
   .comm, .short, .photo {
-    width: 48%;
+    /*width: 48%;
+    display: inline-block;*/
     display: inline-block;
+    width: 686px;
+    margin: 2rem;
+    border: 2px solid black;
+    background-color: black;
+    color: white;
+  }
+
+  #pMedia {
+    text-align: center;
+  }
+
+  .media iframe {
+    height: 380px;
+  }
+  
+  .desc p {
+    overflow-wrap: anywhere;
   }
   
   #contact {
